add author section in post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ into the {body} of the default.hbs template -->
             <header class="post-full-header">
                 <section class="post-full-meta">
                     <time class="post-full-meta-date" datetime="{{ page.date | date:'%e %B %Y' }}">{{ page.date | date:'%e %B %Y' }}</time>
-                    <a style="text-decoration: none">{{site.author}}</a>
+                    <a style="text-decoration: none">&nbsp| {{site.author}}</a>
                 </section>
                 <h1 class="post-full-title">{{ page.title }}</h1>
             </header>
