fix nav on big screen

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ into the {body} of the default.hbs template -->
 
 <header class="site-header outer">
     <div class="inner">
-        {% include site-nav.html %}
+        {% include site-nav-big.html %}
     </div>
 </header>
 
