--- a/_includes/site-nav-big.html
+++ b/_includes/site-nav-big.html
@@ -1,4 +1,4 @@
-<nav class="site-nav">
+<nav class="site-nav site-nav-big">
     <div class="site-nav-left">
         <!-- {% if page.current != 'home' %}
             <a class="site-nav-logo" href="{{ site.url }}{{ site.baseurl }}">{{ site.title }}</a>
@@ -15,4 +15,4 @@
         </div>
     </div>
 </nav>
-
+    
