--- a/assets/built/layout.css
+++ b/assets/built/layout.css
@@ -26,3 +26,10 @@ p a:hover{
 /* .site-nav-left .site-nav-logo{
     font-size: 20px;
 } */
+
+
+@media (min-width: 900px){
+    .site-nav-big{
+        top: 0 !important;
+    }
+}
