--- a/_includes/head.html
+++ b/_includes/head.html
@@ -67,3 +67,4 @@
 
     <meta name="generator" content="Jekyll 3.6.2" />
     <link rel="alternate" type="application/rss+xml" title="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" href="{{ site.baseurl }}feed.xml" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
