--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ into the {body} of the default.hbs template -->
             </header>
 
             {% if page.cover %}
-            <figure class="post-full-image" style="background-image: url({{ site.baseurl }}{{ page.cover }})">
+            <figure class="post-full-image" style="background-image: url({{ site.baseurl }}{{ page.cover }});">
             </figure>
             {% endif %}
 
