--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ into the {body} of the default.hbs template -->
 <main id="site-main" class="site-main outer" role="main">
     <div class="inner">
 
-        <article class="post-full {{ page.subclass }} {% unless page.cover %}no-image{% endunless %}">
+        <article class="post-full {{ page.subclass }} {% unless page.cover %}no-image{% endunless %}" style="max-width: 100%;">
 
             <header class="post-full-header">
                 <section class="post-full-meta">
@@ -38,7 +38,7 @@ into the {body} of the default.hbs template -->
             </figure>
             {% endif %}
 
-            <section class="post-full-content">
+            <section class="post-full-content" style="max-width: 100%;">
                 <div class="kg-card-markdown">
                     {{ content }}
                 </div>
