--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,6 +135,12 @@
 
     <!-- Ghost outputs important scripts and data with this tag - it should always be the very last thing before the closing body tag -->
     <!-- ghost_foot -->
+    <script>
+        MathJax = {
+          "HTML-CSS": {fonts: ["STIX"]},
+          SVG: {font: "STIX-Web"}
+        }
+    </script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 </body>
 </html>
