--- a/_includes/post_pagination.html
+++ b/_includes/post_pagination.html
@@ -1,13 +1,13 @@
 <nav class="pagination" role="pagination">
     {% if paginator.previous_page %}
         {% if paginator.previous_page == 1 %}
-            <a class="newer-posts" href="{{ site.baseurl }}blog" title="Previous Page">&laquo; Newer Posts</a>
+            <a class="post-pag newer-posts" href="{{ site.baseurl }}blog" title="Previous Page" style="color: black; text-decoration: none;">&laquo; Newer Posts</a>
         {% else %}
-            <a class="newer-posts" href="{{ site.baseurl }}{{ paginator.previous_page_path }}" title="Previous Page">&laquo; Newer Posts</a>
+            <a class="post-pag newer-posts" href="{{ site.baseurl }}{{ paginator.previous_page_path }}" title="Previous Page" style="color: black; text-decoration: none;">&laquo; Newer Posts</a>
       {% endif %}
     {% endif %}
     <span class="page-number"> Page {{ paginator.page }} of {{ paginator.total_pages }} </span>
     {% if paginator.next_page %} 
-        <a class="older-posts" href="{{ site.baseurl }}{{ paginator.next_page_path }}" title="Next Page">Older Posts &raquo;</a>
+        <a class="post-pag older-posts" href="{{ site.baseurl }}{{ paginator.next_page_path }}" title="Next Page" style="color: black; text-decoration: none;">Older Posts &raquo;</a>
     {% endif %} 
 </nav>
