--- a/assets/built/layout.css
+++ b/assets/built/layout.css
@@ -44,3 +44,13 @@ p, li{
 .mjx-chtml, .MathJax_CHTML, .MathJax_Preview{
     max-width: 100% !important;
 }
+
+.post-pag{
+    color: black; 
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.post-pag:hover{
+    opacity: 0.5;
+}
